fix: fixed the minor display of vertical scrollbar in horizontal example and vice versa

--- a/packages/raystack/components/scroll-area/scroll-area.module.css
+++ b/packages/raystack/components/scroll-area/scroll-area.module.css
@@ -78,3 +78,8 @@
 .scrollbar-scroll {
   opacity: 0;
 }
+
+.scrollbar[data-orientation="vertical"]:not([data-has-overflow-y]),
+.scrollbar[data-orientation="horizontal"]:not([data-has-overflow-x]) {
+  display: none;
+}
